# medicalgpt

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/pretrain_prepared/: test.jsonl
data/reward_converted/: train.jsonl
data/sft/: train.jsonl
notebooks/: run_on_colab.ipynb
scripts/: run_all.sh  run_eval.sh  run_merge.sh  run_ppo.sh  run_pretrain.sh  run_rm.sh  run_sft.sh  run_test_cpu.sh
src/: evaluate.py  merge_peft_adapter.py  ppo_training.py  prepare_data.py  pretrain.py  reward_modeling.py  supervised_finetuning.py  template.py  utils.py
