[project]
name = "medicalgpt"
version = "0.1.0"
description = "Full RLHF pipeline (SFT → Reward Model → PPO) based on Qwen2.5-3B"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.34.0",
    "datasets>=2.14.6",
    "loguru",
    "peft>=0.14.0",
    "sentencepiece",
    "scikit-learn",
    "tensorboard",
    "tqdm>=4.47.0",
    "transformers>=4.49.0",
    "trl>=0.15.2",
    "wandb",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.1.0",
    "bitsandbytes>=0.41.0",
    "flash-attn>=2.3.0",
]
cpu = [
    "torch>=2.1.0",
]
